added swagger docs for service ticket routes
