# app/blueprints/mechanics/schemas.py
@@ -5,5 +5,12 @@ class MechanicSchema(ma.SQLAlchemyAutoSchema):
   class Meta:
     model = Mechanic
     
+    
+class PublicMechanicSchema(ma.SQLAlchemyAutoSchema):
+  class Meta:
+    model = Mechanic
+    fields = ("mechanic_name", "id")
+    
 mechanic_schema = MechanicSchema()
 mechanics_schema = MechanicSchema(many=True)
+public_mechanic_schema = PublicMechanicSchema()
